label calendar max width correct visible

--- a/genweb/theme/scss/genwebupc.scss
+++ b/genweb/theme/scss/genwebupc.scss
@@ -21,3 +21,7 @@ b, strong {font-weight:bold;}
     box-shadow: 0 -8px 16px -16px rgba(0,0,0,.5) !important;
 	}
 .page-header h1 {color:#446a8e;}
+
+
+a#calendar-next {width: 8px;}
+a#calendar-previous { margin-left: -4px; width: 12px;}
